--- a/gestion_eventos/static/src/css/style.css
+++ b/gestion_eventos/static/src/css/style.css
@@ -54,3 +54,32 @@
 	-moz-border-radius:9px;
 	border-radius:9px;
 }
+
+.enunciado{
+	background-color: #F7B179; !import
+	-moz-border-radius:9px;
+	border-radius:9px;
+	color: #000000;
+	font-size: 14px;
+	
+}
+
+/*CLASE PARA BOTONES DE ACCION*/
+
+.openerp button.detallado {
+	background-color: white;
+	color: #000000;
+	font-weight: bold;
+	background-image: linear-gradient(to bottom, #B4C7DD, #5F8DC1);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 1px rgba(155, 155, 155, 0.4) inset;
+}
+
+.openerp.ui-dialog .ui-dialog-titlebar {
+    background-color: #ededed;
+    background-image: linear-gradient(to bottom, #fcfcfc, #6390C2);
+    border-color: -moz-use-text-color -moz-use-text-color #cacaca;
+    border-radius: 2px 2px 0 0;
+    border-style: none none solid;
+    border-width: medium medium 1px;
+}
+
