--- a/gestion_eventos/views/gestion_documento.xml
+++ b/gestion_eventos/views/gestion_documento.xml
@@ -4,6 +4,7 @@
             <record model="ir.actions.act_window" id="document_file">
                 <field name="name">Documentos Adjuntos</field>
                 <field name="res_model">ir.documento</field>
+                <field name="domain">[('create_uid','=',uid)]</field>
                 <field name="view_type">form</field>
                 <field name="view_mode">tree,form</field>
             </record>
