--- a/integrantes_ubch/views/archivos_estadisticas_mun.xml
+++ b/integrantes_ubch/views/archivos_estadisticas_mun.xml
@@ -8,7 +8,7 @@
 			<field name="res_model">ir.attachment</field>
 			<field name="view_type">form</field>
 			<field name="domain">[('res_model','ilike','integrantes.estadisticas')]</field>
-			<field name="view_mode">tree,form</field>
+			<field name="view_mode">tree</field>
 			<field name="help" type="html">
 				<p class="oe_view_nocontent_create">Agregue un nuevo archivo</p>
 			</field>
