FIX - Corrección del filtro (domain) para el campo many2many "becados" de Nómina de becados, para que aparezcan sólo los becados activos y los suspendididos

--- a/desarrollo_social/views/nomina_becados.xml
+++ b/desarrollo_social/views/nomina_becados.xml
@@ -58,7 +58,7 @@
 					<group col="4" colspan="4">
 						<group string="Selección de Becados">
 							<div class="div_scroll_becado">
-								<field name="becados" nolabel="1" mode="tree" readonly="0" domain="[('categoria','=','1'),'|',('status','=','1'),('status','!=','1'),('tipo_beca','=',tipo_beca)]"/>
+								<field name="becados" nolabel="1" mode="tree" readonly="0" domain="[('categoria','=','1'),'|',('status','=','1'),('status','=','5'),('tipo_beca','=',tipo_beca)]"/>
 							</div>
 						</group>
 					</group>
