--- a/producto_bva/view/movimientos_bva.xml
+++ b/producto_bva/view/movimientos_bva.xml
@@ -23,12 +23,12 @@
 						<field name="product_id" on_change="onchange_product_id(product_id,location_id,location_dest_id, False)"/>
 	 				</xpath>
 					<xpath expr="////field[@name='name']" position="after">
-						<field name="g" invisible="1"/>
-						<field name="sg" invisible="1" />
-						<field name="s" invisible="1" />
-						<field name="estado" invisible="1"/>
-						<field name="bva" invisible="1"/>
-						<field name="v_total" invisible="1"/>
+						<field name="g" invisible="0" class="oe_inline"/>
+						<field name="sg" invisible="0" class="oe_inline"/>
+						<field name="s" invisible="0" class="oe_inline"/>
+						<field name="estado" invisible="0" class="oe_inline"/>
+						<field name="bva" invisible="0" class="oe_inline"/>
+						<field name="v_total" invisible="0" class="oe_inline"/>
 	 				</xpath>
 					<xpath expr="////field[@name='create_date']" position="after">
 						<field name="enviado"/>
