--- a/producto_bva/view/producto_bva.xml
+++ b/producto_bva/view/producto_bva.xml
@@ -131,7 +131,7 @@
 			<field name="inherit_id" ref="stock.view_change_product_quantity" />
 			<field name="arch" type="xml">
 				<button name="change_product_qty" string="_Apply" position="replace">
-					<button name="cambiar_producto" string="Prueba" type="object" class="oe_highlight"/>
+					<button name="cambiar_producto" string="Aplicar" type="object" class="oe_highlight"/>
 				</button>
 			</field>
 		</record>
