--- a/planificacion_presupuesto/view/reporte_generales.xml
+++ b/planificacion_presupuesto/view/reporte_generales.xml
@@ -3,8 +3,8 @@
     <data>
         <!-- Attachment -->
          
-        <record id="view_reportes_presupuesto_form" model="ir.ui.view">
-            <field name="model">reportes.presupuesto</field>
+        <record id="view_reportes_generales_form" model="ir.ui.view">
+            <field name="model">reportes.generales</field>
             <field name="arch" type="xml">
                 <form string="Archivos" version="7.0">
                    <sheet>
@@ -41,8 +41,8 @@
                 </form>
             </field>
         </record>
-        <record id="view_reportes_presupuesto_tree" model="ir.ui.view">
-            <field name="model">reportes.presupuesto</field>
+        <record id="view_reportes_generales_tree" model="ir.ui.view">
+            <field name="model">reportes.generales</field>
             <field name="arch" type="xml">
                 <tree string="Archivos" colors="blue:registro=='Proyectos';green:registro=='Accion Centralizada'">
                     <field name="name" invisible="1"/>
@@ -55,8 +55,8 @@
                 </tree>
             </field>
         </record>
-        <record id="view_reportes_presupuesto_search" model="ir.ui.view">
-            <field name="model">reportes.presupuesto</field>
+        <record id="view_reportes_generales_search" model="ir.ui.view">
+            <field name="model">reportes.generales</field>
             <field name="arch" type="xml">
                 <search string="Archivos">
                     <field name="name" filter_domain="['|', ('name','ilike',self), ('datas_fname','ilike',self)]" string="Nombre de Referencia"/>
@@ -86,17 +86,16 @@
             </field>
         </record>
        
-       <record id="action_reportes_presupuesto" model="ir.actions.act_window">
+       <record id="action_reportes_generales" model="ir.actions.act_window">
             <field name="name">Reportes</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">reportes.presupuesto</field>
+            <field name="res_model">reportes.generales</field>
             <field name="view_type">form</field>
             <field name="view_id" eval="False"/>
-            <field name="search_view_id" ref="view_reportes_presupuesto_search"/>
+            <field name="search_view_id" ref="view_reportes_generales_search"/>
         </record>
        
-        <menuitem id="reportes_presupuesto_menu" name="Reportes" parent="main_proyecto_conaplan_menu" sequence="3" />
-        <menuitem id="menu_reportes_presupuesto_menu" name="Acciones / Proyectos" parent="reportes_presupuesto_menu" action="action_reportes_presupuesto" sequence="1" />
+        <menuitem id="menu_reportes_generales_menu" name="Reportes Generales" parent="reportes_presupuesto_menu" action="action_reportes_generales" sequence="2" />
 
 
     </data>
